--- a/Week_2/Week_2.Rmd
+++ b/Week_2/Week_2.Rmd
@@ -102,6 +102,8 @@ Step 7: Creating .shp layer
 - Look up FIPS code (e.g., for Florida it's 12)  
 - From File Explorer, drag and drop census tract .shp file  
 
+**You can use index.m to look up FIPS code.**
+
 Step 8: Assigning census tract (by spatial join)  
 
 - "Vector" > "Data management tools" > "Join attributes by location"  
@@ -119,6 +121,7 @@ Step 9: Exporting .csv layer
 - "Export" > "Export layer as"  
 - Fill in "Format": "Comma separated value (CSV)"  
 - Fill in "File name": Select path from File Explorer  
+- **For ease, use the same naming convention as Microsoft.**  
 - "Okay" (might take a moment)  
 
 **Note that Steps 1-9 could be automated using Python! (How?)**
@@ -135,10 +138,37 @@ Step 11: Converting .csv to .mat
 - Fill in "File name": Select path from File Explorer  
 - "Open"  
 - "Import selection" and close window  
-- "Workspace" (lower LHS) > Right-clack on table  
-- "Save as"
+- "Workspace" (lower LHS) > Right-click on table > "Rename"  
+- **Call "buildings" to keep generic.**  
+- "Workspace" > Right-click on table > "Save as"  
 - Fill in "File name": Select path from File Explorer  
+- **For ease, use the same naming convention as Microsoft.**  
 - Fill in "Save type as": "MAT-files (*.mat)"  
 - "Save"  
 
 ## Computing building-specific drag coefficients  
+
+Step 12: Navigating to correct working directory  
+
+- Download code: "city_texture_cd_model.mat", "run.mat", "index.m"  
+- From "Current folder" (upper LHS), copy-past your .mat files to the folder with "city_texture_cd_model.mat"  
+
+Step 13: Updating the code  
+
+- "Current folder" (upper LHS) > "index.m" (double-click to open)  
+- Use CTRL+F to find "Mini_UROP" comments  
+- Update the code if necessary  
+- "Current folder" (upper LHS) > "run.mat" (double-click to open)  
+- Use CTRL+F to find "Mini_UROP" comments  
+- Update the code if necessary  
+
+Step 14: Running the code  
+
+- In "Command window" (bottom of page), run "index.m"  
+
+Step 15: Sharing the results  
+
+- **You'll have one .mat and one .csv file for drag coefficients in each state.**  
+- Upload to Dropbox :)  
+
+**I've never run this code before, so let me know if you get error messages!**  
