--- a/Week_3/Week_3.Rmd
+++ b/Week_3/Week_3.Rmd
@@ -9,6 +9,19 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Interpretting results from last week:  
+
+```{r showChoro1}
+shiny::includeHTML("./Tableau_ex.html")
+```
+
+- You can check out the example figures: [here](https://public.tableau.com/profile/bensu8294#!/vizhome/ex_3_16110820952000/ModelWindSpeedRatios)  
+- Referring to the model WSRs, we expect metro areas to be "orange", and less dense areas to be "blue".
+- Miami, Orlando and Jacksonville in FL follow this trend.  
+- However, metro areas such as Atlanta in GA are not discernable. Why?  
+- Several inland areas in TX and NY that don't seem to be metro areas are discernable. Why?  
+- Perhaps compare screenshots from .geojson files or Google maps.  
+
 # To discuss the economic implications of texture, we need to:  
 
 - Collect necessary information  
